--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <a href=""><p>Terms of Service</p></a>
                 <a href=""><p>JOIN OUR WAITLIST</p></a>
             </div>
-            <div class="ftr">
+            <div class="ftr reveal">
                 <h3>PERFECT PAIR</h3>
                 <p>Subscribe to get access to updates, <br> exclusive deals and more.</p>
                 <input type="text" placeholder="Enter your email address" maxlength="50"><br>
