--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img id="disp2" src="big1.jpeg" alt="">
         </div>
         <div class="cntctinfo">
-            <div class="ftr">
+            <div class="ftr reveal">
                 <h3>ABOUT US</h3>
                 <p>At Perfect Pair, we seek to provide <br> top-of-the-shelf shoes for all our customers <br>
                 </p>
@@ -93,7 +93,7 @@
                     <div class="ig"><a href="" target="_blank"><img class="icon" src="instagram.png" alt=""></a></div>
                 </div>
             </div>
-            <div class="ftr">
+            <div class="ftr reveal">
                 <a href=""><p>About Us</p></a>
                 <a href=""><p>Contact Us</p></a>
                 <a href=""><p>FAQs</p></a>
