--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p id="motto">Find Perfection In Every Shoe</p>
             </div>
             <div class="carticon">
-                <a href=""><img id="carticon" src="shopping-cart.png" alt=""></a>
+                <a href=""><img id="bagicon" src="shopping-bag.png" alt=""></a>
             </div>
         </div>
         <div class="display">
@@ -84,11 +84,11 @@
         </div>
         <div class="cntctinfo">
             <div class="ftr reveal">
-                <h3>ABOUT US</h3>
+                <h3 id="about">ABOUT US</h3>
                 <p>At Perfect Pair, we seek to provide <br> top-of-the-shelf shoes for all our customers <br>
                 </p>
                 <div class="socials">
-                    <div class="phone"><a href="tel:+2349077475727" target="_blank"><img class="icon" src="phone-call.png" alt=""></a></div>
+                    <div class="phone"><a href="tel:+2349077475727" target="_blank"><img class="icon" src="telephone.png" alt=""></a></div>
                     <div class="wtp"><a href="https://wa.me/+2349077475727" target="_blank"><img class="icon" src="whatsapp.png" alt=""></a></div>
                     <div class="ig"><a href="" target="_blank"><img class="icon" src="instagram.png" alt=""></a></div>
                 </div>
@@ -106,7 +106,8 @@
             <div class="ftr reveal">
                 <h3>PERFECT PAIR</h3>
                 <p>Subscribe to get access to updates, <br> exclusive deals and more.</p>
-                <input type="text" placeholder="Enter your email address" maxlength="50"><br>
+                <input type="email" placeholder="Enter your email address" maxlength="50"><br>
+                <span></span>
                 <a href=""><button id="sub">SUBSCRIBE</button></a>
             </div>
         </div>
